tests/baselines/reference/declarationEmitIndexTypeNotFound.errors.txt
tests/cases/compiler/declarationEmitIndexTypeNotFound.ts(2,13): error TS2304: Cannot find name 'TypeNotFound'.
tests/cases/compiler/declarationEmitIndexTypeNotFound.ts(2,13): error TS4092: Parameter 'index' of index signature from exported interface has or is using private name 'TypeNotFound'.


==== tests/cases/compiler/declarationEmitIndexTypeNotFound.ts (2 errors) ====
    export interface Test {
        [index: TypeNotFound]: any;
                ~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'TypeNotFound'.
                ~~~~~~~~~~~~
!!! error TS4092: Parameter 'index' of index signature from exported interface has or is using private name 'TypeNotFound'.
    }
    